# ndspec

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  pyproject.toml
.cargo/: config.toml
assets/: katex-header.html
crates/azimuth/: Cargo.toml
crates/azimuth/src/: conversions.rs  lib.rs
crates/ndcore/: Cargo.toml
python/ndspec/: __init__.py
src/: lib.rs
src/azimuth/: branch.rs  conversions.rs
src/core/: azimuth_conversions.rs  constants.rs  finitediff.rs  integration.rs  interpolation.rs  mod.rs  ndarray_ext.rs  roots.rs
src/py_interface/: mod.rs  py_azimuth.rs  py_core.rs  py_spectrums.rs
src/spectrums/: mod.rs  spectrum1d.rs  spectrum2d.rs
src/waves/: bretschneider.rs  common.rs  gaussian.rs  jonswap.rs  mod.rs  ochi.rs  phillips.rs  pierson_moskowitz.rs  spreading.rs
src/wind/: froya.rs  mod.rs  wind.rs
