[package]
name = "ndspec"
version = "0.1.0"
authors = ["Michael Morris-Thomas <michael.morris-thomas@uwa.edu.au>"]
description = "A package for ocean waves and energy spectra"
repository = "https://github.com/mikemt/ndspec"
license-file = "LICENSE.txt"
license = "MIT OR Apache-2.0"
edition = "2021"

include = ["src/*", "assets/*.*", "Cargo.toml"]

[workspace]
members = [ "crates/*"]

[dependencies]
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
num = "0.4.3"
num-complex = "0.4.5"
rayon = "1.10.0"
special = "0.10.3"

ndcore = {path = "crates/ndcore", version = "0.1.0"}
azimuth = {path = "crates/azimuth", version = "0.1.0"}

pyo3 = {version = "0.20.3", optional = true}
numpy = {version = "0.20.0", optional = true}
embed-doc-image = "0.1.4"


[dev-dependencies]
approx = "0.5.1"
assert_approx_eq = "1.1.0"

[features]
python-extension = ["pyo3", "numpy", "pyo3/extension-module"]
doc-images = []

[lib]
name = "ndspec"
crate-type = ["cdylib"]

[package.metadata.rust]
components = ["rustfmt"]
max_width = 100
hard_tabs = false
tab_spaces = 4
newline_style = "Auto"


